# twatch-lib

./: CMakeLists.txt  Kconfig  README.md
drivers/: axp20x.c  drv2605.c  ft6236.c  i2c.c  pcf8563.c  st7789.c  uart.c
drivers/axp202/: axp20x.c
drivers/bma423/: bma.c  bma4.c  bma423.c
drivers/ir/: esp32_rmt_common.c  rmtlib_nec.c  rmtlib_raw.c  rmtlib_rc5.c  rmtlib_samsung.c  rmtlib_sony.c
font/: font16.c
hal/: audio.c  gps.c  hal.c  pmu.c  rtc.c  screen.c  touch.c  vibrate.c
hal/pmu/: pmu.c
img/: img.c
inc/: img.h  twatch.h
inc/drivers/: axp20x.h  drv2605.h  ft6236.h  i2c.h  pcf8563.h  st7789.h  uart.h
inc/drivers/bma423/: bma.h
inc/drivers/ir/: esp32_rmt_common.h  esp32_rmt_remotes.h
inc/font/: font16.h
inc/hal/: audio.h  gps.h  hal.h  pmu.h  rtc.h  screen.h  touch.h  vibrate.h
inc/ui/: button.h  container.h  events.h  frame.h  image.h  label.h  listbox.h  modal.h  progress.h  scrollbar.h  slider.h  spinner.h  style.h  switch.h  ui.h  widget.h
ui/: button.c  container.c  frame.c  image.c  label.c  listbox.c  modal.c  progress.c  scrollbar.c  slider.c  spinner.c  switch.c  ui.c  widget.c
